--- a/TugasChapter4/TugasChapter4/src/main/resources/application.properties
+++ b/TugasChapter4/TugasChapter4/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/kelompok2chp4
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=Binar123
+spring.datasource.password=admin
 logging.level.org.springframework.web=DEBUG
 
