--- a/TugasChapter4/TugasChapter4/src/main/resources/application.properties
+++ b/TugasChapter4/TugasChapter4/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/kelompok2chp4
 spring.datasource.username=postgres
-spring.datasource.password=summer75
+spring.datasource.password=admin
 logging.level.org.springframework.web=DEBUG
